fix about spacing

--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -53,7 +53,7 @@
   .container {
     height: 90vh;
     align-items: center;
-    padding: 8% 5% 0 5%;
+    padding: 0 5% 0 5%;
   }
 
   .content {
